# reification-rules

./: .gitignore  Makefile  README.md  reification-rules.cabal  stack.yaml  todo.md
src/: .ghci
src/ReificationRules/: BuildDictionary.hs  Exp.hs  FOS.hs  HOS.hs  Misc.hs  MonoPrims.hs  Plugin.hs  Prim.hs  Run.hs  ShowUtils.hs  Simplify.hs  ToCCC.hs
test/: Basic.hs  ExamplesForSuite.hs  Makefile  RuleTest.hs  Shaped.hs  ShapedSuite.hs  Suite.hs  Tests.hs
