Name:               reification-rules
Version:            0.0.0
Cabal-Version:      >= 1.10
Synopsis:           GHC Core reification via rules
Category:           reification
Description:
  GHC Core reification via rules
Author:             Conal Elliott
Maintainer:         conal@conal.net
Copyright:          (c) 2016 by Conal Elliott
License:            BSD3
License-File:       COPYING
Stability:          experimental
build-type:         Simple

source-repository head
  type:     git
  location: git://github.com/conal/reification-rules.git

Library
  default-language: Haskell98
  hs-Source-Dirs:   src
  Build-Depends:    base<5
                  , containers
                  , ghc >= 7.10.3
                  , ghc-prim
                  , constraints
                  , transformers >= 0.4
                  , ty >= 0.1.5
                  , hermit >= 1.0.0.1
                  , circat

-- TODO: drop ty, and use Data.Type.Equality

-- I only use hermit for initTcFromModGuts. To do: drop the dependency.

  Exposed-Modules:
                    ReificationRules.Misc
                    ReificationRules.ShowUtils
                    ReificationRules.Prim
                    ReificationRules.Exp
                    ReificationRules.HOS
                    ReificationRules.BuildDictionary
                    ReificationRules.Simplify
                    ReificationRules.Plugin
                    ReificationRules.MonoPrims
                    ReificationRules.ToCCC
                    ReificationRules.Run
  ghc-options:      -Wall


Test-Suite test-reify
  type:             detailed-0.9
  default-language: Haskell98
  hs-Source-Dirs:   test
  test-module:      Suite
  Build-Depends:    base<5, Cabal >= 1.10
                  , circat, reification-rules, shaped-types

  ghc-options:      -O

--   ghc-options:      -O -fplugin=ReificationRules.Plugin
--                     -fplugin-opt=ReificationRules.Plugin:trace
